; ModuleID = '/home/carl/AnghaBench/mruby/src/extr_class.c_class_from_sym.c'
source_filename = "/home/carl/AnghaBench/mruby/src/extr_class.c_class_from_sym.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.RClass = type { i32 }

@MRB_TT_CLASS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.RClass* (i32*, %struct.RClass*, i32)* @class_from_sym to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.RClass* @class_from_sym(i32* %0, %struct.RClass* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.RClass*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store %struct.RClass* %1, %struct.RClass** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = load %struct.RClass*, %struct.RClass** %5, align 8
  %10 = call i32 @mrb_obj_value(%struct.RClass* %9)
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @mrb_const_get(i32* %8, i32 %10, i32 %11)
  store i32 %12, i32* %7, align 4
  %13 = load i32*, i32** %4, align 8
  %14 = load i32, i32* %7, align 4
  %15 = load i32, i32* @MRB_TT_CLASS, align 4
  %16 = call i32 @mrb_check_type(i32* %13, i32 %14, i32 %15)
  %17 = load i32, i32* %7, align 4
  %18 = call %struct.RClass* @mrb_class_ptr(i32 %17)
  ret %struct.RClass* %18
}

declare dso_local i32 @mrb_const_get(i32*, i32, i32) #1

declare dso_local i32 @mrb_obj_value(%struct.RClass*) #1

declare dso_local i32 @mrb_check_type(i32*, i32, i32) #1

declare dso_local %struct.RClass* @mrb_class_ptr(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
